--- a/index.html
+++ b/index.html
@@ -41,5 +41,114 @@
 
       </div>
     </header>
+
+    <div class="top-wrapper">
+      <div class="container">
+        <img src="images/deena-englard-RJrCj87zPJc-unsplash.jpg" alt=トップ画面 class="top-image">
+        <p>Writeは文章を書く人のためのミニマルなWordPressテーマです。装飾を極限まで省いたデザインは、あなたの文章を主役にします。</p>
+      </div>
+    </div>
+
+    <div class="main-wrapper">
+      <div class="container">
+        <div class="text-box">
+          <div class="date">
+            <p><a href="#">2018年9月1日</a></p>
+          </div>
+
+          <div class="textarea">
+            <h1 class="text-heading"><a href="#">書くためのテーマ</a></h1>
+            <p class="text">Writeは文章を書く人のためのミニマルなWordPressテーマです。装飾を極限まで省いたデザインは、あなたの文章を主役にします。</p>
+          </div>
+        </div>
+
+
+        <div class="text-box">
+          <div class="date">
+            <p><a href="#">2018年3月5日</a></p>
+          </div>
+
+          <div class="textarea">
+            <h1 class="text-heading"><a href="#">画像付きの投稿</a></h1>
+            <p class="text">吾輩は猫である。名前はまだ無い。どこで生れたかとんと見当がつかぬ。何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは記憶している。吾輩はここで始めて人間というものを見た。</p>
+          </div>
+        </div>
+
+        <div class="text-box">
+          <div class="date">
+            <p><a href="#">2018年3月5日</a></p>
+          </div>
+
+          <div class="textarea">
+            <h1 class="text-heading"><a href="#">引用付きの投稿</a></h1>
+            <p class="text">吾輩は猫である。名前はまだ無い。どこで生れたかとんと見当がつかぬ。
+              何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは記憶している。吾輩はここで始めて人間というものを見た。しかもあとで聞くとそれ…
+            </p>
+          </div>
+        </div>
+
+        <div class="text-box">
+          <div class="date">
+            <p><a href="#">2018年3月5日</a></p>
+          </div>
+
+          <div class="textarea">
+            <h1 class="text-heading"><a href="#">引用付きの投稿</a></h1>
+            <p class="text">吾輩は猫である。名前はまだ無い。どこで生れたかとんと見当がつかぬ。
+              何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは記憶している。吾輩はここで始めて人間というものを見た。しかもあとで聞くとそれ…
+            </p>
+          </div>
+        </div>
+
+        <div class="text-box">
+          <div class="date">
+            <p><a href="#">2018年3月5日</a></p>
+          </div>
+
+          <div class="textarea">
+            <h1 class="text-heading"><a href="#">コメント付きの投稿</a></h1>
+            <p class="text">吾輩は猫である。名前はまだ無い。どこで生れたかとんと見当がつかぬ。
+              何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは記憶している。吾輩はここで始めて人間というものを見た。しかもあとで聞くとそれ…
+            </p>
+          </div>
+      </div>
+
+      <div class="text-box">
+        <div class="date">
+          <p><a href="#">2018年3月3日</a></p>
+        </div>
+
+        <div class="textarea">
+          <h1 class="text-heading"><a href="#">吾輩は猫である</a></h1>
+          <p class="text">吾輩は猫である。名前はまだ無い。どこで生れたかとんと見当がつかぬ。
+            何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは記憶している。吾輩はここで始めて人間というものを見た。しかもあとで聞くとそれ…
+          </p>
+        </div>
+    </div>
+
+    <div class="text-box">
+      <div class="date">
+        <p><a href="#">2018年3月3日</a></p>
+      </div>
+
+      <div class="textarea">
+        <h1 class="text-heading"><a href="#">名前はまだ無い。どこで生れたかとんと見当がつかぬ。</a></h1>
+        <p class="text">吾輩は猫である。名前はまだ無い。どこで生れたかとんと見当がつかぬ。
+          何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは記憶している。吾輩はここで始めて人間というものを見た。しかもあとで聞くとそれ…
+        </p>
+      </div>
+  </div>
+
+  <ul class="page-list">
+    <li class="this">1</a></li>
+    <li><a href="#">2</a></li>
+    <li><a href="#">3</a></li>
+    <li><a href="#">次へ</a></li>
+  </ul>
+
+    </div>
+
+
+
   </body>
 </html>
