プロフィール

--- a/index.html
+++ b/index.html
@@ -111,42 +111,88 @@
               何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは記憶している。吾輩はここで始めて人間というものを見た。しかもあとで聞くとそれ…
             </p>
           </div>
+       </div>
+
+          <div class="text-box">
+            <div class="date">
+             <p><a href="#">2018年3月3日</a></p>
+            </div>
+
+             <div class="textarea">
+               <h1 class="text-heading"><a href="#">吾輩は猫である</a></h1>
+               <p class="text">吾輩は猫である。名前はまだ無い。どこで生れたかとんと見当がつかぬ。
+                 何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは記憶している。吾輩はここで始めて人間というものを見た。しかもあとで聞くとそれ…
+               </p>
+             </div>
+          </div>
+
+         <div class="text-box">
+           <div class="date">
+             <p><a href="#">2018年3月3日</a></p>
+           </div>
+
+              <div class="textarea">
+                <h1 class="text-heading"><a href="#">名前はまだ無い。どこで生れたかとんと見当がつかぬ。</a></h1>
+                <p class="text">吾輩は猫である。名前はまだ無い。どこで生れたかとんと見当がつかぬ。
+                  何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは記憶している。吾輩はここで始めて人間というものを見た。しかもあとで聞くとそれ…
+                </p>
+              </div>
+          </div>
+
+
+           <ul class="page-list">
+             <li class="this">1</a></li>
+             <li><a href="#">2</a></li>
+             <li><a href="#">3</a></li>
+             <li><a href="#">次へ</a></li>
+          </ul>
       </div>
-
-      <div class="text-box">
-        <div class="date">
-          <p><a href="#">2018年3月3日</a></p>
-        </div>
-
-        <div class="textarea">
-          <h1 class="text-heading"><a href="#">吾輩は猫である</a></h1>
-          <p class="text">吾輩は猫である。名前はまだ無い。どこで生れたかとんと見当がつかぬ。
-            何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは記憶している。吾輩はここで始めて人間というものを見た。しかもあとで聞くとそれ…
-          </p>
-        </div>
     </div>
 
-    <div class="text-box">
-      <div class="date">
-        <p><a href="#">2018年3月3日</a></p>
+   <div class="profile-wrapper">
+     <div class="container">
+       <div class="profile">
+          <img src="images/shipman-northcutt-sgZX15Da8YE-unsplash.jpg" alt=プロフィール画面 class="photo">
+
+          <div class="profile-heading">
+           <h1>John Doe</h1>
+          </div>
+
+         <div class="profile-text">
+           <p>これはプロフィールウィジェットです。ここにはプロフィール画像・名前・自己紹介文・ソーシャルリンク（最大7つ）を設定することができます。</p>
+         </div>
+        </div>
+
+      
+      <div class="sub-menu">
+         <div class="sub">
+            <h2 class="sub-heading">フッター右</h2>
+            <p class="sub-text">3つのフッター右ウィジェットエリアはフッターの右側に表示され、使用する数によって幅は自動的に調整されます。1つも使用しない場合は表示されません。</p>
+         </div>
+
+         <div class="sub">
+           <h2 class="sub-heading">最近の投稿</h2>
+           <ul class="sub1">
+           <li><a href="#">書くためのテーマ</a></li>
+           <p>2018年9月1日</p>
+           <li><a href="#">画像付きのテーマ</a></li>
+           <p>2018年3月5日</p>
+           <li><a href="#">引用付きのテーマ</a></li>
+           <p>2018年3月5日</p>
+        </div>
+
+        <div class="sub">
+          <h2 class="sub-heading">カテゴリー</h2>
+          <ul class="sub2">
+            <li><a href="#">サンプル投稿</a></li>
+            <li><a href="#">投稿フォーマット</a></li>
+            <li><a href="#">普通の投稿</a></li>
+        </div>
+        <input class="sub-input" type="search" placeholder="検索...">
+
       </div>
-
-      <div class="textarea">
-        <h1 class="text-heading"><a href="#">名前はまだ無い。どこで生れたかとんと見当がつかぬ。</a></h1>
-        <p class="text">吾輩は猫である。名前はまだ無い。どこで生れたかとんと見当がつかぬ。
-          何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは記憶している。吾輩はここで始めて人間というものを見た。しかもあとで聞くとそれ…
-        </p>
-      </div>
-  </div>
-
-  <ul class="page-list">
-    <li class="this">1</a></li>
-    <li><a href="#">2</a></li>
-    <li><a href="#">3</a></li>
-    <li><a href="#">次へ</a></li>
-  </ul>
-
-    </div>
+     </div>
+   </div>
 
 
 
