--- a/index.html
+++ b/index.html
@@ -194,6 +194,16 @@
      </div>
    </div>
 
+<footer>
+
+  <div class="container">
+
+    <div class="footer-logo">
+      <p>Powered by <span><a href="#">Wordpress</a></span> | Theme: <span><a href="#">Write</a></span> by Themegraphy</p>
+    </div>
+  </div>
+</footer>
+
 
 
   </body>
